Set up project repository and tools.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="display-1 text-danger">Site header</h1>
         </header>
         <main>
-            <h2>Site Content</h2>
+            <h2>Site content</h2>
         </main>
         <footer>
             <h2>Site footer</h2>
