--- a/index.html
+++ b/index.html
@@ -5,16 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Capstone Project: HTML/CSS</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <header>
-            <h1 class="display-1 text-danger">Site header</h1>
+    <div class="">
+        <header class="bg-danger">
+            <div class="container">
+                <div class="row justify-content-center align-items-center">
+                    <h1 class="display-1 text-white display-6">TwoSteps</h1>
+                    <nav class="container">
+                        <div class="row">
+                            <div class="col">
+                                <i class="bi bi-alarm"></i>
+                                <a class="nav-links" href="#"> Listings</a>
+                            </div>
+                            <div class="col">
+                                <i class="bi bi-alarm"></i>
+                                <a class="nav-links" href="#"> Listings</a>
+                            </div>
+                            <div class="col">
+                                <i class="bi bi-alarm"></i>
+                                <a class="nav-links" href="#"> Listings</a>
+                            </div>
+                            <div class="col">
+                                <i class="bi bi-alarm"></i>
+                                <a class="nav-links" href="#"> Listings</a>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
         </header>
         <main>
             <h2>Site content</h2>
+            <i class="bi bi-file-plus"></i>
         </main>
         <footer>
             <h2>Site footer</h2>
