--- a/index.html
+++ b/index.html
@@ -10,41 +10,43 @@
     <title>Capstone Project: HTML/CSS</title>
 </head>
 <body>
-    <div class="">
-        <header class="bg-danger">
-            <div class="container">
-                <div class="row justify-content-center align-items-center">
-                    <h1 class="display-1 text-white display-6">TwoSteps</h1>
-                    <nav class="container">
-                        <div class="row">
-                            <div class="col">
-                                <i class="bi bi-alarm"></i>
-                                <a class="nav-links" href="#"> Listings</a>
-                            </div>
-                            <div class="col">
-                                <i class="bi bi-alarm"></i>
-                                <a class="nav-links" href="#"> Listings</a>
-                            </div>
-                            <div class="col">
-                                <i class="bi bi-alarm"></i>
-                                <a class="nav-links" href="#"> Listings</a>
-                            </div>
-                            <div class="col">
-                                <i class="bi bi-alarm"></i>
-                                <a class="nav-links" href="#"> Listings</a>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
+    <div class="container-fluid px-0">
+        <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-3">
+            <div class="c">
+                <h1 class="text-white text-sm-center text-lg-left">
+                    <a class="text-white fs-" href="#">
+                        <i class="bi bi-shop"></i> TwoSteps</a>
+                </h1>
+            </div>
+            <div class="">
+                <nav class="d-flex align-items-center justify-content-center">
+                    <div class="px-3">
+                        <a class="d-flex" href="#">
+                            <i class="bi bi-eye-fill"></i>
+                            <span class="d-none d-lg-inline">Discover</span>
+                        </a>
+                    </div>
+                    <div class="px-3">
+                        <a class="d-flex" href="#">
+                            <i class="bi bi-person-circle"></i>
+                            <span class="d-none d-lg-inline">About</span>
+                        </a>
+                    </div>
+                    <div class="px-3">
+                        <a class="d-flex" href="#">
+                            <i class="bi bi-chat-left-text-fill"></i>
+                            <span class="d-none d-lg-inline">Blog</span>
+                        </a>
+                    </div>
+                    <div class="px-3">
+                        <a class="d-flex" href="#">
+                            <i class="bi bi-check-circle-fill"></i>
+                            <span class="d-none d-lg-inline">Register</span>
+                        </a>
+                    </div>
+                </nav>
             </div>
         </header>
-        <main>
-            <h2>Site content</h2>
-            <i class="bi bi-file-plus"></i>
-        </main>
-        <footer>
-            <h2>Site footer</h2>
-        </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
