Add hero section with form to search local businesses

--- a/index.html
+++ b/index.html
@@ -47,7 +47,24 @@
                 </nav>
             </div>
         </header>
-    </div>
+        <main>
+            <section class="hero d-flex flex-column  justify-content-center align-items-center pb-5 mb-5 pt-5">
+                <div class="overlay">
+                    <h2 class="headline display-5 text-uppercase">Discover local businesses near you</h2>
+                    <form class="d-flex flex-column bg-light p-5 rounded">
+                        <label class="d-block text-dark text-uppercase px-0 mx-0" for="query">Search by keyword</label>
+                        <div class="row">
+                            <div class="col-12 col-md-9 mx-0 px-0 py-1 px-1 d">
+                                <input class="form-control bg-white" type="search" placeholder="Name or location..." aria-label="Search" id="query">
+                            </div>
+                            <div class="col-12 col-md-3 mx-0 px-0 py-1 px-1">
+                                <button class="btn bg-danger btn-outline-danger text-white mx-0 w-100" type="submit">Search</button>
+                            </div>
+                        </div>
+                      </form>
+                </div>
+                <button class="my-5 p-2 border-0 rounded" type="submit">How it works</button>
+            </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
