Add getting started section with four steps to reach a local business

--- a/index.html
+++ b/index.html
@@ -65,6 +65,56 @@
                 </div>
                 <button class="my-5 p-2 border-0 rounded" type="submit">How it works</button>
             </section>
+            <section class="getting-started py-5">
+                <h2 class="text-center text-danger">Get started with TwoSteps following these simple steps</h2>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6 text-center">
+                        <div>
+                            <h1 class="display-3">
+                                <i class="bi bi-search"></i>
+                            </h1>
+                        </div>
+                        <div>
+                            <h2>1 - Search</h2>
+                            <p>Search for local businesses near you using business name or location</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-6 text-center">
+                        <div>
+                            <h1 class="display-3">
+                                <i class="bi bi-geo-alt-fill"></i>
+                            </h1>
+                        </div>
+                        <div>
+                            <h2>2 - Discover</h2>
+                            <p>Discover local businesses from out list offering the products and services you're looking for.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-6 text-center">
+                        <div>
+                            <h1 class="display-3">
+                                <i class="bi bi-info-circle-fill"></i>
+                            </h1>
+                        </div>
+                        <div>
+                            <h2>3 - Info</h2>
+                            <p>Get to learn more about local businesses near you</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-6 text-center">
+                        <div>
+                            <h1 class="display-3">
+                                <i class="bi bi-telephone-outbound-fill"></i>
+                            </h1>
+                        </div>
+                        <div>
+                            <h2>4 - Contact</h2>
+                            <p>Contact owners and managers of local business for more information or inquiries</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
