--- a/index.html
+++ b/index.html
@@ -114,6 +114,38 @@
                     </div>
                 </div>
             </section>
+            <section class="value-proposition">
+                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-danger justify-content-between align-items-center text-sm-center text-lg-left pt-0 pb-5 px-5">
+                    <div>
+                        <h3>10,000+ registered local businesses</h3>
+                        <p>Discover local business near you</p>
+                        <button type="submit">Discover</button>
+                    </div>
+                    <div>
+                        <img class="img-fluid img-round" src="/img/google-maps-multiple-locations.png" alt="map">
+                    </div>
+                </div>
+                <div class="top-10 d-flex flex-sm-column-reverse flex-lg-row bg-grey justify-content-between align-items-center text-sm-center text-lg-left pt-0 pb-5 px-5">
+                    <div>
+                        <h3 class="text-black">Top 10 most visited places</h3>
+                        <p class="text-black">Checkout the most visited places near recommended by visitors like you</p>
+                        <button type="submit">Suggestion</button>
+                    </div>
+                    <div>
+                        <img class="img-round" src="/img/five-star-rating.jpeg" alt="five star place">
+                    </div>
+                </div>
+                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-info justify-content-between align-items-center text-sm-center text-lg-left pt-0 pb-5 px-5">
+                    <div>
+                        <h3>TwoSteps, Anywhwere Anytime</h3>
+                        <p>Use our web app, designed to be mobile friendly, from home, office, park etc </p>
+                    </div>
+                    <div>
+                        <img class="img-round" src="/img/microverse-logo.jpg" alt="screen shot">
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
