--- a/index.html
+++ b/index.html
@@ -146,6 +146,78 @@
                 </div>
             </section>
         </main>
+        <footer class="pt-5">
+            <ul class="decorated-nav nav justify-content-center border-top border-bottom border-1 flex-sm-column flex-lg-row text-sm-center">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Search</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Terms</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item d-none d-lg-inline">
+                    <a class="nav-link" href="#"><i class="bi bi-shop footer-logo"></i></a>
+                </li>
+                <li class="nav-item d-none d-lg-inline">
+                    <a class="nav-link" href="#">facebook</a>
+                </li>
+                <li class="nav-item d-none d-lg-inline">
+                    <a class="nav-link" href="#">twitter</a>
+                </li>
+                <li class="nav-item d-none d-lg-inline">
+                    <a class="nav-link" href="#">instagram</a>
+                </li>
+                <li class="nav-item d-none d-lg-inline">
+                    <a class="nav-link" href="#">linkedin</a>
+                </li>
+              </ul>
+              <div class="row py-5 my-3 px-5 flex-sm-column flex-lg-row align-items-center">
+                  <div class="col text-center">
+                    <h4>subscribe</h4>
+                    <form class="">
+                      <div class="input-group mb-3">
+                          <input type="text" class="form-control btn-outline-secondary" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                          <button class="btn mx-1 bg-dark text-white bg-dark" type="button" id="button-addon2">Button</button>
+                        </div>
+                    </form>
+                  </div>
+                  <div class="col text-center">
+                    <h4>contact</h4>
+                    <p>Lorem ipsum</p>
+                  </div>
+                  <div class="col text-center">
+                    <h4>about</h4>
+                    <p>Lorem ipsum</p>
+                  </div>
+              </div>
+              <nav class="footer-bottom text-grey">
+                <div class="container-fluid">
+                    <div class="d-flex  flex-sm-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
+                    <div class="">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-telegram"></i>
+                        <i class="bi bi-whatsapp"></i>
+                        <i class="bi bi-linkedin"></i>
+                        <i class="bi bi-youtube"></i>
+                    </div>
+                    <div class="">
+                        <p>
+                            Copyright &copy; TwoSteps. All rights reserved.
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </nav>
+        </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
