--- a/index.html
+++ b/index.html
@@ -11,143 +11,138 @@
 </head>
 <body>
     <div class="container-fluid px-0">
-        <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-3">
-            <div class="c">
-                <h1 class="text-white text-sm-center text-lg-left">
-                    <a class="text-white fs-" href="#">
-                        <i class="bi bi-shop"></i> TwoSteps</a>
-                </h1>
-            </div>
-            <div class="">
-                <nav class="d-flex align-items-center justify-content-center">
-                    <div class="px-3">
-                        <a class="d-flex" href="#">
-                            <i class="bi bi-eye-fill"></i>
-                            <span class="d-none d-lg-inline">Discover</span>
-                        </a>
-                    </div>
-                    <div class="px-3">
-                        <a class="d-flex" href="#">
-                            <i class="bi bi-person-circle"></i>
-                            <span class="d-none d-lg-inline">About</span>
-                        </a>
-                    </div>
-                    <div class="px-3">
-                        <a class="d-flex" href="#">
-                            <i class="bi bi-chat-left-text-fill"></i>
-                            <span class="d-none d-lg-inline">Blog</span>
-                        </a>
-                    </div>
-                    <div class="px-3">
-                        <a class="d-flex" href="#">
-                            <i class="bi bi-check-circle-fill"></i>
-                            <span class="d-none d-lg-inline">Register</span>
-                        </a>
-                    </div>
-                </nav>
-            </div>
+        <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-1">
+            <h1 class="text-white text-sm-center text-lg-left">
+                <a class="text-white" href="#">
+                    <i class="bi bi-shop"></i> TwoSteps
+                </a>
+            </h1>
+            <nav class="d-flex align-items-center justify-content-center">
+                <div class="px-3">
+                    <a class="d-flex" href="#">
+                        <i class="bi bi-eye-fill"></i>
+                        <span class="d-none d-lg-inline">Discover</span>
+                    </a>
+                </div>
+                <div class="px-3">
+                    <a class="d-flex" href="#">
+                        <i class="bi bi-person-circle"></i>
+                        <span class="d-none d-lg-inline">About</span>
+                    </a>
+                </div>
+                <div class="px-3">
+                    <a class="d-flex" href="#">
+                        <i class="bi bi-chat-left-text-fill"></i>
+                        <span class="d-none d-lg-inline">Blog</span>
+                    </a>
+                </div>
+                <div class="px-3">
+                    <a class="d-flex" href="#">
+                        <i class="bi bi-check-circle-fill"></i>
+                        <span class="d-none d-lg-inline">Register</span>
+                    </a>
+                </div>
+            </nav>
         </header>
         <main>
-            <section class="hero d-flex flex-column  justify-content-center align-items-center pb-5 mb-5 pt-5">
-                <div class="overlay">
-                    <h2 class="headline display-5 text-uppercase">Discover local businesses near you</h2>
-                    <form class="d-flex flex-column bg-light p-5 rounded">
-                        <label class="d-block text-dark text-uppercase px-0 mx-0" for="query">Search by keyword</label>
-                        <div class="row">
-                            <div class="col-12 col-md-9 mx-0 px-0 py-1 px-1 d">
-                                <input class="form-control bg-white" type="search" placeholder="Name or location..." aria-label="Search" id="query">
+            <section class="hero d-flex flex-column justify-content-center align-items-center">
+                <div class="mx-3">
+                    <h2 class="headline display-5 text-uppercase">TwoSteps... Discover local businesses near you</h2>
+                    <div class="opac bg-light p-1 rounded">
+                        <form action="#" class="form p-4 bg-dark">
+                            <p class="text-dark text-uppercase p-0 m-0">Search by keyword:</p>
+                            <div class="container">
+                                <div class="row p-0 m-0">
+                                    <div class="col-12 col-md-9 my-1 px-0">
+                                        <input class="form-control p-1" type="search" placeholder="Enter name or location..." aria-label="Search">
+                                    </div>
+                                    <div class="col-12 col-md-3 mx-0 py-1 px-0">
+                                        <button class="btn bg-danger text-white mx-1 w-100" type="submit">Search</button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-12 col-md-3 mx-0 px-0 py-1 px-1">
-                                <button class="btn bg-danger btn-outline-danger text-white mx-0 w-100" type="submit">Search</button>
-                            </div>
-                        </div>
-                      </form>
+                        </form>
+                    </div>
                 </div>
-                <button class="my-5 p-2 border-0 rounded" type="submit">How it works</button>
+                <button class="my-5 p-2 border-0 rounded bg-light" type="submit">How it works</button>
             </section>
-            <section class="getting-started py-5">
-                <h2 class="text-center text-danger">Get started with TwoSteps following these simple steps</h2>
-                <div class="row">
-                    <div class="col-sm-12 col-lg-6 text-center">
-                        <div>
-                            <h1 class="display-3">
+            <section class="getting-started py-1">
+                <h2 class="text-center text-danger m-5 p-5 text-uppercase">Get started with TwoSteps following these simple steps</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6 text-center">
+                            <h2 class="display-3">
                                 <i class="bi bi-search"></i>
-                            </h1>
+                            </h2>
+                            <div>
+                                <h2>1 - Search</h2>
+                                <p>Search for local businesses near you using business name or location</p>
+                            </div>
                         </div>
-                        <div>
-                            <h2>1 - Search</h2>
-                            <p>Search for local businesses near you using business name or location</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-6 text-center">
-                        <div>
-                            <h1 class="display-3">
+                        <div class="col-sm-12 col-lg-6 text-center">
+                            <h2 class="display-3">
                                 <i class="bi bi-geo-alt-fill"></i>
-                            </h1>
+                            </h2>
+                            <div>
+                                <h2>2 - Discover</h2>
+                                <p>Discover local businesses from our list offering the products and services you're looking for.</p>
+                            </div>
                         </div>
-                        <div>
-                            <h2>2 - Discover</h2>
-                            <p>Discover local businesses from out list offering the products and services you're looking for.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-6 text-center">
-                        <div>
-                            <h1 class="display-3">
+                        <div class="col-sm-12 col-lg-6 text-center">
+                            <h2 class="display-3">
                                 <i class="bi bi-info-circle-fill"></i>
-                            </h1>
+                            </h2>
+                            <div>
+                                <h2>3 - Info</h2>
+                                <p>Get to learn more about local businesses near you</p>
+                            </div>
                         </div>
-                        <div>
-                            <h2>3 - Info</h2>
-                            <p>Get to learn more about local businesses near you</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-6 text-center">
-                        <div>
-                            <h1 class="display-3">
+                        <div class="col-sm-12 col-lg-6 text-center">
+                            <h2 class="display-3">
                                 <i class="bi bi-telephone-outbound-fill"></i>
-                            </h1>
-                        </div>
-                        <div>
-                            <h2>4 - Contact</h2>
-                            <p>Contact owners and managers of local business for more information or inquiries</p>
+                            </h2>
+                            <div>
+                                <h2>4 - Contact</h2>
+                                <p>Contact owners and managers of local business for more information or inquiries</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="value-proposition">
-                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-danger justify-content-between align-items-center text-sm-center text-lg-left pt-0 pb-5 px-5">
+                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-danger justify-content-between align-items-center text-sm-center text-lg-left p-5">
                     <div>
                         <h3>10,000+ registered local businesses</h3>
                         <p>Discover local business near you</p>
-                        <button type="submit">Discover</button>
+                        <button class="text-danger" type="submit">Discover</button>
                     </div>
                     <div>
-                        <img class="img-fluid img-round" src="/img/google-maps-multiple-locations.png" alt="map">
+                        <img class="img-fluid rounded-circle" src="/img/google-maps-multiple-locations.png" alt="google-maps-multiple-locations">
                     </div>
                 </div>
-                <div class="top-10 d-flex flex-sm-column-reverse flex-lg-row bg-grey justify-content-between align-items-center text-sm-center text-lg-left pt-0 pb-5 px-5">
+                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-grey justify-content-between align-items-center text-sm-center text-lg-left p-5">
                     <div>
                         <h3 class="text-black">Top 10 most visited places</h3>
-                        <p class="text-black">Checkout the most visited places near recommended by visitors like you</p>
+                        <p class="text-black">Checkout the most visited places recommended by visitors like you</p>
                         <button type="submit">Suggestion</button>
                     </div>
                     <div>
-                        <img class="img-round" src="/img/five-star-rating.jpeg" alt="five star place">
+                        <img class="img-fluid rounded-circle" src="/img/five-star-rating.jpeg" alt="five star place">
                     </div>
                 </div>
-                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-info justify-content-between align-items-center text-sm-center text-lg-left pt-0 pb-5 px-5">
+                <div class="d-flex flex-sm-column-reverse flex-lg-row bg-info justify-content-between align-items-center text-sm-center text-lg-left p-5">
                     <div>
                         <h3>TwoSteps, Anywhwere Anytime</h3>
                         <p>Use our web app, designed to be mobile friendly, from home, office, park etc </p>
                     </div>
                     <div>
-                        <img class="img-round" src="/img/microverse-logo.jpg" alt="screen shot">
+                        <img class="img-fluid rounded-circle" src="/img/microverse-logo.jpg" alt="screen shot">
                     </div>
                 </div>
             </section>
         </main>
         <footer class="pt-5">
-            <ul class="decorated-nav nav justify-content-center border-top border-bottom border-1 flex-sm-column flex-lg-row text-sm-center">
+            <ul class="decorated-nav nav justify-content-center text-sm-center">
                 <li class="nav-item">
                   <a class="nav-link" href="#">Home</a>
                 </li>
@@ -164,7 +159,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item d-none d-lg-inline">
-                    <a class="nav-link" href="#"><i class="bi bi-shop footer-logo"></i></a>
+                    <a class="nav-link" href="#"><i class="bi bi-shop footer-logo rounded-circle"></i></a>
                 </li>
                 <li class="nav-item d-none d-lg-inline">
                     <a class="nav-link" href="#">facebook</a>
@@ -179,13 +174,13 @@
                     <a class="nav-link" href="#">linkedin</a>
                 </li>
               </ul>
-              <div class="row py-5 my-3 px-5 flex-sm-column flex-lg-row align-items-center">
+              <div class="subscribe-section row py-5 my-3 px-5 flex-sm-column flex-lg-row align-items-center">
                   <div class="col text-center">
                     <h4>subscribe</h4>
                     <form class="">
                       <div class="input-group mb-3">
-                          <input type="text" class="form-control btn-outline-secondary" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                          <button class="btn mx-1 bg-dark text-white bg-dark" type="button" id="button-addon2">Button</button>
+                          <input type="email" class="form-control btn-outline-secondary" placeholder="username@example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
+                          <button class="btn mx-1 bg-dark text-white bg-dark" type="button" id="button-addon2">Send</button>
                         </div>
                     </form>
                   </div>
