Fix broken image path

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <button class="text-danger" type="submit">Discover</button>
                     </div>
                     <div>
-                        <img class="img-fluid rounded-circle" src="/img/google-maps-multiple-locations.png" alt="google-maps-multiple-locations">
+                        <img class="img-fluid rounded-circle" src="./img/google-maps-multiple-locations.png" alt="google-maps-multiple-locations">
                     </div>
                 </div>
                 <div class="d-flex flex-sm-column-reverse flex-lg-row bg-grey justify-content-between align-items-center text-sm-center text-lg-left p-5">
@@ -127,7 +127,7 @@
                         <button type="submit">Suggestion</button>
                     </div>
                     <div>
-                        <img class="img-fluid rounded-circle" src="/img/five-star-rating.jpeg" alt="five star place">
+                        <img class="img-fluid rounded-circle" src="./img/five-star-rating.jpeg" alt="five star place">
                     </div>
                 </div>
                 <div class="d-flex flex-sm-column-reverse flex-lg-row bg-info justify-content-between align-items-center text-sm-center text-lg-left p-5">
@@ -136,7 +136,7 @@
                         <p>Use our web app, designed to be mobile friendly, from home, office, park etc </p>
                     </div>
                     <div>
-                        <img class="img-fluid rounded-circle" src="/img/microverse-logo.jpg" alt="screen shot">
+                        <img class="img-fluid rounded-circle" src="./img/microverse-logo.jpg" alt="screen shot">
                     </div>
                 </div>
             </section>
