Fix broken image path

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         </form>
                     </div>
                 </div>
-                <button class="my-5 p-2 border-0 rounded bg-light" type="submit">How it works</button>
+                <a class="btn my-5 p-2 border border-outline-light rounded bg-dark text-light" href="#howitworks">How it works</a>
             </section>
-            <section class="getting-started py-1">
+            <section class="getting-started py-1"  id='howitworks'>
                 <h2 class="text-center text-danger m-5 p-5 text-uppercase">Get started with TwoSteps following these simple steps</h2>
                 <div class="container">
                     <div class="row">
@@ -93,7 +93,7 @@
                                 <i class="bi bi-info-circle-fill"></i>
                             </h2>
                             <div>
-                                <h2>3 - Info</h2>
+                                <h2>3 - Learn</h2>
                                 <p>Get to learn more about local businesses near you</p>
                             </div>
                         </div>
