Fix hero section broken background image path

--- a/index.html
+++ b/index.html
@@ -45,29 +45,30 @@
             </nav>
         </header>
         <main>
-            <section class="hero d-flex flex-column justify-content-center align-items-center">
-                <div class="mx-3">
+            <section class="hero d-flex flex-column justify-content-center align-items-center position-relative">
+                <div class="dark-cover position-absolute"></div>
+                <div class="mx-3 hero-content">
                     <h2 class="headline display-5 text-uppercase">TwoSteps... Discover local businesses near you</h2>
-                    <div class="opac bg-light p-1 rounded">
-                        <form action="#" class="form p-4 bg-dark">
+                    <div class="bg-light p-1 rounded opacity-9">
+                        <form action="#" class="form p-4">
                             <p class="text-dark text-uppercase p-0 m-0">Search by keyword:</p>
-                            <div class="container">
+                            <div class="container px-0">
                                 <div class="row p-0 m-0">
                                     <div class="col-12 col-md-9 my-1 px-0">
                                         <input class="form-control p-1" type="search" placeholder="Enter name or location..." aria-label="Search">
                                     </div>
                                     <div class="col-12 col-md-3 mx-0 py-1 px-0">
-                                        <button class="btn bg-danger text-white mx-1 w-100" type="submit">Search</button>
+                                        <button class="btn bg-danger text-white mx-1 w-100" type="submit">SEARCH</button>
                                     </div>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
-                <a class="btn my-5 p-2 border border-outline-light rounded bg-dark text-light" href="#howitworks">How it works</a>
+                <a class="btn my-5 p-2 border border-outline-light rounded bg-light text-dark" href="#howitworks">How it works</a>
             </section>
             <section class="getting-started py-1"  id='howitworks'>
-                <h2 class="text-center text-danger m-5 p-5 text-uppercase">Get started with TwoSteps following these simple steps</h2>
+                <h2 class="text-center text-danger m-5 p-5 text-uppercase">Get started with TwoSteps</h2>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-lg-6 text-center">
