--- a/results.html
+++ b/results.html
@@ -44,7 +44,46 @@
                 </div>
             </nav>
         </header>
-        
+        <main>
+            <section class="filter-section bg-light mt-5 py-5 d-flex flex-column align-items-center justify-content-center">
+                <h2 class="w-50 mx-auto py-3">Filter by name, category, country, state:</h2>
+                <form class="row gap-3 align-items-center">
+                    <div class="col-auto mx-1">
+                        <input type="text" class="form-control" id="autoSizingInput" placeholder="Name">
+                    </div>
+                    <div class="col-auto">
+                        <select class="form-select form-control" id="autoSizingSelect">
+                        <option selected>Category</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-auto">
+                        <select class="form-select form-control" id="autoSizingSelect">
+                        <option selected>Country</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-auto">
+                        <select class="form-select form-control" id="autoSizingSelect">
+                        <option selected>State/City</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-warning">Clear filters</button>
+                    </div>
+                </form>
+            </section>
+        </main>
         <footer class="pt-5">
             <ul class="decorated-nav nav justify-content-center text-sm-center mx-3">
                 <li class="nav-item">
