Make filters responsive using flex

--- a/results.html
+++ b/results.html
@@ -45,49 +45,51 @@
             </nav>
         </header>
         <main>
-            <section class="filters-section bg-light mt-5 mb-2 p-4 shadow-sm">
-                <h2 class="d-none fs-6 text-center">Filter by name, category, country, state:</h2>
+            <section class="filters-section bg-light mt-5 mb-2 p-5 shadow-sm">
+                <h2 class="d-none d-md-block text-center">Filter by name, category, country, state:</h2>
                 <p class="d-md-none text-center">Filter by name, category, country, state:</p>
-                <form class="form">
-                    <div class="m-1">
-                        <input type="text" class="form-control" id="autoSizingInput" placeholder="Name">
-                    </div>
-                    <div class="m-1">
-                        <select class="form-select form-control" id="autoSizingSelect">
-                        <option selected>Category</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        </select>
-                    </div>
-                    <div class="m-1">
-                        <select class="form-select form-control" id="autoSizingSelect">
-                        <option selected>Country</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        </select>
-                    </div>
-                    <div class="m-1">
-                        <select class="form-select form-control" id="autoSizingSelect">
-                        <option selected>State/City</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        </select>
-                    </div>
-                    <div class="m-1">
-                        <button type="submit" class="btn btn-primary w-100">Search</button>
-                    </div>
-                    <div class="m-1">
-                        <button type="submit" class="btn btn-warning w-100">Clear filters</button>
+                <form class="form container">
+                    <div class="row">
+                        <div div class="col-sm-12 col-md-2 p-1">
+                            <input type="text" class="form-control" id="autoSizingInput" placeholder="Name">
+                        </div>
+                        <div div class="col-sm-12 col-md-2 p-1">
+                            <select class="form-select form-control" id="autoSizingSelect">
+                            <option selected>Category</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div div class="col-sm-12 col-md-2 p-1">
+                            <select class="form-select form-control" id="autoSizingSelect">
+                            <option selected>Country</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div div class="col-sm-12 col-md-2 p-1">
+                            <select class="form-select form-control" id="autoSizingSelect">
+                            <option selected>State/City</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div div class="col-sm-12 col-md-2 p-1">
+                            <button type="submit" class="btn btn-primary w-100">Search</button>
+                        </div>
+                        <div div class="col-sm-12 col-md-2 p-1">
+                            <button type="submit" class="btn btn-warning w-100">Clear</button>
+                        </div>
                     </div>
                 </form>
             </section>
             <section class="search-results bg-lght py-1">
                 <h2 class="d-none d-md-block p-2 text-center">Search result found 7 businesses:</h2>
                 <p class="d-md-none p-2 text-center">Search result found 7 businesses:</p>
-                <div class="business-list">
+                <div class="business-list container">
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="biz-card p-0 border m-2 rounded shadow">
