--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </h2>
                             <div>
                                 <h2>1 - Search</h2>
-                                <p>Search for local businesses near you using business name or location</p>
+                                <p>Search for local businesses near you using business name or location Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolorem ducimus quos ratione labore repudiandae id necessitatibus ea vitae asperiores!</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
@@ -86,7 +86,7 @@
                             </h2>
                             <div>
                                 <h2>2 - Discover</h2>
-                                <p>Discover local businesses from our list offering the products and services you're looking for.</p>
+                                <p>Discover local businesses from our list offering the products and services you're looking for Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat voluptates perferendis obcaecati molestias impedit unde ullam sapiente vel inventore quis.</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
@@ -94,8 +94,8 @@
                                 <i class="bi bi-info-circle-fill"></i>
                             </h2>
                             <div>
-                                <h2>3 - Learn</h2>
-                                <p>Get to learn more about local businesses near you</p>
+                                <h2>3 - View</h2>
+                                <p>Get to learn more about local businesses near you Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, voluptate eveniet. Alias quia quas consequuntur quam impedit amet unde enim!</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
@@ -104,7 +104,7 @@
                             </h2>
                             <div>
                                 <h2>4 - Contact</h2>
-                                <p>Contact owners and managers of local business for more information or inquiries</p>
+                                <p>Contact owners and managers of local business for more information or inquiries Lorem ipsum dolor sit amet consectetur adipisicing elit. In molestias exercitationem quasi tempora odit cum quaerat corrupti quia voluptate aliquam!</p>
                             </div>
                         </div>
                     </div>
@@ -114,30 +114,30 @@
                 <div class="d-flex flex-column-reverse flex-lg-row bg-danger justify-content-between align-items-center text-center text-lg-left p-5">
                     <div>
                         <h3>10,000+ registered local businesses</h3>
-                        <p>Discover local business near you</p>
+                        <p>Discover local business near you Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere tempora neque dolore minima facilis alias temporibus delectus possimus iste praesentium reprehenderit eaque dolorem, cum eos, quidem voluptates, nostrum quibusdam quasi.</p>
                         <button class="text-danger" type="submit">Discover</button>
                     </div>
                     <div>
-                        <img class="img-fluid rounded-circle" src="./img/google-maps-multiple-locations.png" alt="google-maps-multiple-locations">
+                        <img class="rounded-circle" src="./img/google-maps-multiple-locations.png" alt="google-maps-multiple-locations">
                     </div>
                 </div>
                 <div class="d-flex flex-column-reverse flex-lg-row bg-grey justify-content-between align-items-center text-center text-lg-left p-5">
                     <div>
                         <h3 class="text-black">Top 10 most visited places</h3>
-                        <p class="text-black">Checkout the most visited places recommended by visitors like you</p>
+                        <p class="text-black">Checkout the most visited places recommended by visitors like you Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, voluptates eveniet voluptas unde est recusandae sunt, ut, beatae aperiam perspiciatis aspernatur iure quia impedit similique molestias. Rerum neque aspernatur reiciendis!</p>
                         <button type="submit">Suggestion</button>
                     </div>
                     <div>
-                        <img class="img-fluid rounded-circle" src="./img/five-star-rating.jpeg" alt="five star place">
+                        <img class="rounded-circle" src="./img/five-star-rating.jpeg" alt="five star place">
                     </div>
                 </div>
                 <div class="d-flex flex-column-reverse flex-lg-row bg-info justify-content-between align-items-center text-center text-lg-left p-5">
                     <div>
                         <h3>TwoSteps, Anywhwere Anytime</h3>
-                        <p>Use our web app, designed to be mobile friendly, from home, office, park etc </p>
+                        <p>Use our web app, designed to be mobile friendly, from home, office, park etc Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius animi blanditiis placeat cumque quae ullam nisi atque, a tempora ea lauda</p>
                     </div>
                     <div>
-                        <img class="img-fluid rounded-circle" src="./img/microverse-logo.jpg" alt="screen shot">
+                        <img class="rounded-circle" src="./img/microverse-logo.jpg" alt="screen shot">
                     </div>
                 </div>
             </section>
@@ -187,11 +187,11 @@
                   </div>
                   <div class="col text-center">
                     <h4>contact</h4>
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur.</p>
                   </div>
                   <div class="col text-center">
                     <h4>about</h4>
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, nam.</p>
                   </div>
               </div>
               <nav class="footer-bottom text-grey">
